--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>My Sample Project</h1>
-    <div id="github_thread" data-oauth-key="WWANKMvsCbVkU_8CmQphyrfhKew"
+    <div id="gitqus_thread" data-oauth-key="WWANKMvsCbVkU_8CmQphyrfhKew"
          data-repo-user="punchagan" data-repo-name="experiri" >
     </div>
     <noscript>Please enable JavaScript to view the comments powered by GitHub shitthing.</a></noscript>
