Try getting all the scripts from rawgit.

--- a/example.html
+++ b/example.html
@@ -4,7 +4,9 @@
     <title>My Sample Project</title>
     <!-- data-main attribute tells require.js to load
          scripts/main.js after require.js loads. -->
-    <script data-main="scripts/main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js"></script>
+    <script data-main="https://rawgit.com/punchagan/gitqus/master/scripts/main"
+            src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js">
+    </script>
   </head>
   <body>
     <h1>My Sample Project</h1>
