--- a/example.html
+++ b/example.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>My Sample Project</title>
-    <script src="public/javascripts/main-built.js"></script>
   </head>
   <body>
     <h1>My Sample Project</h1>
     <div id="gitqus_thread" data-oauth-key="WWANKMvsCbVkU_8CmQphyrfhKew"
          data-repo-user="punchagan" data-repo-name="experiri" >
     </div>
+    <script id="gitqus-script" src="public/javascripts/main-built.js"></script>
     <noscript>Please enable JavaScript to view the comments powered by GitHub shitthing.</a></noscript>
   </body>
 </html>
