--- a/example.html
+++ b/example.html
@@ -9,6 +9,6 @@
          data-repo-user="punchagan" data-repo-name="experiri" >
     </div>
     <script id="gitqus-script" src="public/javascripts/main-built.js"></script>
-    <noscript>Please enable JavaScript to view the comments powered by GitHub shitthing.</a></noscript>
+    <noscript>Please enable JavaScript to view the comments powered by Gitqus.</a></noscript>
   </body>
 </html>
