Get comments to display with React.

--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>My Sample Project</h1>
-    <div id="gitqus_thread" data-oauth-key="WWANKMvsCbVkU_8CmQphyrfhKew"
+    <div id="gitqus-thread" data-oauth-key="WWANKMvsCbVkU_8CmQphyrfhKew"
          data-repo-user="punchagan" data-repo-name="experiri" >
     </div>
     <script id="gitqus-script" src="public/javascripts/main-built.js"></script>
