Rename the project to Crumb.

--- a/example.html
+++ b/example.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <h1>My Sample Project</h1>
-    <div id="gitqus-thread" data-oauth-key="WWANKMvsCbVkU_8CmQphyrfhKew"
+    <div id="crumb-thread" data-oauth-key="WWANKMvsCbVkU_8CmQphyrfhKew"
          data-repo-user="punchagan" data-repo-name="experiri" >
     </div>
-    <script id="gitqus-script" src="public/javascripts/main-built.js"></script>
-    <noscript>Please enable JavaScript to view the comments powered by Gitqus.</a></noscript>
+    <script id="crumb-script" src="public/javascripts/main-built.js"></script>
+    <noscript>Please enable JavaScript to view the comments powered by Crumb.</a></noscript>
   </body>
 </html>
